# Wallpaper-Changer

./: .coverage  .env-example  .gitignore  LICENSE  README.md  SETUP_GUIDE.md  create_venv.py  pyproject.toml  pyproject.toml (entry point section)  pyproject.toml (excerpt)  pytest.ini  requirements.txt  run.bat  run.sh  setup.bat  setup.py  setup.sh  setup_dev_env.bat  setup_dev_env.sh  wallpaper_changer.py
img/saved/: wallpaper-006.txt  wallpaper-007.txt
src/: __init__.py  categories.py  cli.py  config.py  dependency_handler.py  init_dirs.py  integrated_main.py  logger.py  main.py  unsplash_api.py  wallpaper.py
src/wallpaper_changer/: __init__.py  config.py  main.py  wallpaper_handler.py
tests/: __init__.py  conftest.py  run_all_tests.py  test_categories.py  test_cli.py  test_cli_enhanced.py  test_cli_extended.py  test_config.py  test_dependency_handler.py  test_init_dirs.py  test_init_dirs_enhanced.py  test_integration.py  test_logger.py  test_logger_enhanced.py  test_main.py  test_main_coverage.py  test_main_coverage_alt.py  test_main_coverage_helper.py  test_main_coverage_with_helper.py  test_main_extended.py  test_main_run.py  test_unsplash_api.py  test_wallpaper.py  test_wallpaper_changer_handler.py  test_wallpaper_changer_main.py  test_wallpaper_enhanced.py  test_wallpaper_extended.py
wallpaper_changer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
