[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallpaper-changer"
version = "0.1.0"
description = "An application to automatically change desktop wallpapers"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Damien", email = "example@example.com"}
]
maintainers = [
    {name = "Damien", email = "example@example.com"}
]
keywords = ["wallpaper", "desktop", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Desktop Environment",
]
dependencies = [
    "requests>=2.28.1",
    "pillow>=9.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.3.0",
    "flake8>=4.0.1",
    "mypy>=0.942",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/wallpaper-changer"
"Bug Tracker" = "https://github.com/yourusername/wallpaper-changer/issues"
"Documentation" = "https://github.com/yourusername/wallpaper-changer"

[project.scripts]
wallpaper-changer = "wallpaper_changer.main:main"

[tool.setuptools]
packages = ["wallpaper_changer"]
package-dir = {"wallpaper_changer" = "."}

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -v --cov=wallpaper_changer"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["wallpaper_changer"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
